--- a/app_locadora_carros/package.json
+++ b/app_locadora_carros/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "vuex": "^3.6.2",
         "@meforma/vue-toaster": "^1.3.0",
         "bootstrap-vue": "^2.22.0"
     }
